# inndxd

./: .env.example  .gitignore  .pre-commit-config.yaml  Justfile  README.md  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/inndxd_api/: __init__.py  auth_deps.py  celery_app.py  config.py  dependencies.py  main.py  metrics.py  provider_health.py  provider_sync.py  tasks.py  tracing.py
apps/api/src/inndxd_api/middleware/: __init__.py  tenant.py
apps/api/src/inndxd_api/routers/: __init__.py  api_keys.py  audit_logs.py  auth.py  benchmark.py  briefs.py  data_items.py  llm_providers.py  projects.py  runs.py  ws.py
apps/api/src/inndxd_api/schemas/: brief.py  data_item.py  project.py  run.py
apps/api/tests/: __init__.py  conftest.py  test_briefs.py  test_data_items.py  test_projects.py  test_runs.py
apps/web/: pyproject.toml
apps/web/src/inndxd_web/: __init__.py  auth.py  main.py
apps/web/src/inndxd_web/routers/: __init__.py  ui.py  ui_admin.py  ui_auth.py  ui_briefs.py  ui_data_items.py  ui_projects.py
apps/web/static/css/: input.css
apps/web/templates/: base.html
apps/web/templates/admin/api_keys/: list.html
apps/web/templates/admin/audit_logs/: list.html
apps/web/templates/admin/providers/: create.html  list.html
apps/web/templates/auth/: login.html  register.html
apps/web/templates/briefs/: create.html  detail.html  list.html
apps/web/templates/dashboard/: index.html
apps/web/templates/data_items/: list.html
apps/web/templates/partials/: _data_item_rows.html  _key_created_modal.html  _run_status.html  _stats_cards.html  _status_badge.html
apps/web/templates/projects/: create.html  detail.html  edit.html  list.html
docker/ollama/: entrypoint.sh
plan/: masterplan.md  repo-strategy.md  stage2.md  stage3.md  stage4.md
(+1 files in other folders)
