[project]
name = "inndxd"
version = "0.1.0"
description = "Open-source agentic data platform"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.uv.workspace]
members = [
    "packages/inndxd-core",
    "packages/inndxd-agents",
    "packages/inndxd-mcp",
    "apps/api",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "httpx>=0.28,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pre-commit>=4,<5",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps", "packages"]
[tool.uv.sources]
inndxd-core = { workspace = true }
inndxd-agents = { workspace = true }
inndxd-mcp = { workspace = true }
