[project]
name = "inndxd-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "inndxd-core",
    "inndxd-agents",
    "fastapi[standard]>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic-settings>=2.7,<3",
]

[build-system]
requires = ["uv-core"]
build-backend = "uv.core"