[project]
name = "inndxd-web"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "inndxd-core",
    "inndxd-agents",
    "fastapi[standard]>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.18,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inndxd_web"]
